--- a/composer.json
+++ b/composer.json
@@ -1,28 +1,34 @@
 {
-  "name": "xiaoke4869/mico-ve-tos-php-sdk",
-  "description": "PHP SDK for volcengine TOS",
-  "license": "Apache 2.0",
-  "version": "2.1.9",
-  "type": "library",
-  "authors": [
-    {
-      "name": "xiangshijian",
-      "email": "xiangshijian@bytedance.com"
+    "name": "xiaoke4869/mico-ve-tos-php-sdk",
+    "description": "PHP SDK for volcengine TOS",
+    "license": "Apache-2.0",
+    "version": "1.0.0",
+    "type": "library",
+    "authors": [
+        {
+            "name": "xiangshijian",
+            "email": "xiangshijian@bytedance.com"
+        }
+    ],
+    "keywords": [
+        "volcengine",
+        "tos",
+        "php"
+    ],
+    "require": {
+        "php": ">=5.6",
+        "guzzlehttp/guzzle": "^7.0.1",
+        "ext-json": "*"
+    },
+    "autoload": {
+        "psr-4": {
+            "Tos\\": "src/"
+        }
+    },
+    "config": {
+        "process-timeout": 1800,
+        "github-oauth": {
+            "github.com": "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"
+        }
     }
-  ],
-  "keywords": [
-    "volcengine",
-    "tos",
-    "php"
-  ],
-  "require": {
-    "php": ">=5.6",
-    "guzzlehttp/guzzle": "^7.0.1",
-    "ext-json": "*"
-  },
-  "autoload": {
-    "psr-4": {
-      "Tos\\": "src/"
-    }
-  }
 }
